--- a/app/src/main/res/layout/activity_empty.xml
+++ b/app/src/main/res/layout/activity_empty.xml
@@ -10,4 +10,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.belatrix.pickmeup.EmptyActivity">
 
+    <Button
+        android:id="@+id/add_route_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add New Route"
+        />
+
 </RelativeLayout>
