rectoring package folders name

--- a/app/src/main/res/layout/activity_add_route.xml
+++ b/app/src/main/res/layout/activity_add_route.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.belatrix.pickmeup.AddRoute">
+    tools:context=".activity.AddRouteActivity">
 
     <TextView
         android:id="@+id/message_txv"
