--- a/app/src/main/res/layout/activity_empty.xml
+++ b/app/src/main/res/layout/activity_empty.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.belatrix.pickmeup.EmptyActivity">
+    tools:context=".activity.EmptyActivity">
 
     <Button
         android:id="@+id/add_route_btn"
