--- a/app/src/main/res/layout/activity_empty.xml
+++ b/app/src/main/res/layout/activity_empty.xml
@@ -9,21 +9,21 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.belatrix.pickmeup.EmptyActivity">
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Home Activity"
-        android:onClick="openHomeActivity"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="47dp" />
 
     <Button
         android:id="@+id/add_route_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add New Route"
+        />
+
+    <Button
+        android:id="@+id/home_activity_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Home Activity"
+        android:onClick="openHomeActivity"
+        android:layout_below="@+id/add_route_btn"
         />
 
 </RelativeLayout>
