--- a/app/src/main/res/layout/activity_empty.xml
+++ b/app/src/main/res/layout/activity_empty.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -10,11 +11,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".activity.EmptyActivity">
 
-    <Button
-        android:id="@+id/add_route_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Add New Route"
-        />
+    <!--<Button-->
+        <!--android:id="@+id/add_route_btn"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Add New Route"-->
+        <!--/>-->
+
+
+
 
 </RelativeLayout>
