--- a/app/src/main/res/layout/activity_empty.xml
+++ b/app/src/main/res/layout/activity_empty.xml
@@ -17,4 +17,13 @@
         android:text="Add New Route"
         />
 
+    <Button
+        android:id="@+id/login_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        android:onClick="openLoginActivity"
+        android:layout_below="@+id/add_route_btn"
+        />
+
 </RelativeLayout>
