--- a/app/src/main/res/layout/app_bar_nav_drawer.xml
+++ b/app/src/main/res/layout/app_bar_nav_drawer.xml
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_nav_drawer" />
+    <include layout="@layout/activity_empty" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
