--- a/app/src/main/res/layout/activity_empty.xml
+++ b/app/src/main/res/layout/activity_empty.xml
@@ -9,14 +9,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_marginTop="@dimen/nav_header_height"
     tools:context=".activity.EmptyActivity">
 
-    <!--<Button-->
-        <!--android:id="@+id/add_route_btn"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Add New Route"-->
-        <!--/>-->
+    <Button
+        android:id="@+id/add_route_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add New Route"
+        />
 
 
 
