--- a/app/src/main/res/layout/activity_empty.xml
+++ b/app/src/main/res/layout/activity_empty.xml
@@ -8,14 +8,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.belatrix.pickmeup.EmptyActivity">
+    tools:context="com.belatrix.pickmeup.activity.EmptyActivity">
 
     <Button
         android:id="@+id/add_route_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add New Route"
-        />
+    />
 
     <Button
         android:id="@+id/home_activity_button"
@@ -24,7 +24,7 @@
         android:text="Home Activity"
         android:onClick="openHomeActivity"
         android:layout_below="@+id/add_route_btn"
-        />
+    />
     <Button
         android:id="@+id/login_btn"
         android:layout_width="match_parent"
@@ -32,6 +32,6 @@
         android:text="Login"
         android:onClick="openLoginActivity"
         android:layout_below="@+id/home_activity_button"
-        />
+    />
 
 </RelativeLayout>
