--- a/app/src/main/res/layout/activity_empty.xml
+++ b/app/src/main/res/layout/activity_empty.xml
@@ -17,4 +17,11 @@
         android:text="Add New Route"
         />
 
+    <Button
+        android:id="@+id/page_detail_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Page Detail"
+        />
+
 </RelativeLayout>
