--- a/app/src/main/res/layout/fragment_my_routes.xml
+++ b/app/src/main/res/layout/fragment_my_routes.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".activity.MyRoutesFragment">
+             tools:context=".fragment.MyRoutesFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
