--- a/app/src/main/res/layout/app_bar_nav_drawer.xml
+++ b/app/src/main/res/layout/app_bar_nav_drawer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.belatrix.pickmeup.activity.NavDrawerActivity">
+    tools:context=".activity.NavDrawerActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -18,10 +18,47 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
-
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/activity_empty" />
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/nav_header_height">
+
+        <Button
+            android:id="@+id/add_route_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Add New Route"
+        />
+
+        <Button
+            android:id="@+id/home_activity_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Home Activity"
+            android:onClick="openHomeActivity"
+            android:layout_below="@+id/add_route_btn"
+        />
+        <Button
+            android:id="@+id/login_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Login"
+            android:onClick="openLoginActivity"
+            android:layout_below="@+id/home_activity_button"
+        />
+
+    </RelativeLayout>
+
+
+    <!--<include layout="@layout/activity_empty" />-->
+
+
+
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -29,6 +66,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+        app:backgroundTint="@color/colorPrimary"
+        android:src="@android:drawable/ic_input_add" />
+        <!--android:onClick="addRouteActivity"-->
+
 
 </android.support.design.widget.CoordinatorLayout>
