--- a/app/src/main/res/layout/content_nav_drawer.xml
+++ b/app/src/main/res/layout/content_nav_drawer.xml
@@ -13,15 +13,15 @@
     tools:showIn="@layout/app_bar_nav_drawer">
 
 
-    <Button
-        android:id="@+id/add_route_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Add New Route"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="159dp" />
+    <!--<Button-->
+        <!--android:id="@+id/add_route_btn"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Add New Route"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_marginTop="159dp" />-->
 
 
 </RelativeLayout>
