--- a/app/src/main/res/layout/activity_add_route.xml
+++ b/app/src/main/res/layout/activity_add_route.xml
@@ -1,9 +1,10 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            tools:context=".activity.AddRouteActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_weight="1"
+    tools:context=".activity.AddRouteActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -19,21 +20,21 @@
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/from_til"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                app:errorEnabled="true"
+                style="@style/addRouteLabel">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/from_tiet"
                     style="@style/addRouteEditText"
-                    android:hint="@string/departure"/>
+                    android:hint="@string/departure" />
 
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/to_til"
                 android:layout_below="@+id/from_til"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                app:errorEnabled="true"
+                style="@style/addRouteLabel">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/to_tiet"
@@ -45,8 +46,8 @@
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/cost_til"
                 android:layout_below="@+id/to_til"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                app:errorEnabled="true"
+                style="@style/addRouteLabel">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/cost_tiet"
@@ -56,18 +57,29 @@
 
             </android.support.design.widget.TextInputLayout>
 
+            <TextView
+                android:id="@+id/payment_method_tv"
+                android:layout_below="@+id/cost_til"
+                android:textSize="12sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:text="@string/payment_method"/>
+
             <Spinner
                 android:id="@+id/payment_method_spn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/cost_til"
-                android:paddingTop="10dp"/>
+                android:layout_below="@+id/payment_method_tv"
+                style="@style/Widget.AppCompat.Spinner.Underlined"
+                android:paddingTop="10dp"
+                android:layout_marginBottom="20dp"/>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/departure_time_til"
                 android:layout_below="@+id/payment_method_spn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                app:errorEnabled="true"
+                style="@style/addRouteLabel">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/departure_time_tiet"
@@ -79,8 +91,8 @@
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/contact_til"
                 android:layout_below="@+id/departure_time_til"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                app:errorEnabled="true"
+                style="@style/addRouteLabel">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/contact_tiet"
@@ -92,8 +104,8 @@
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/streets_til"
                 android:layout_below="@+id/contact_til"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                app:errorEnabled="true"
+                style="@style/addRouteLabel">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/streets_tiet"
