--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,54 +1,80 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:orientation="vertical" android:layout_width="match_parent"
-                android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:gravity="center"
-                android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".activity.LoginActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:gravity="center"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".activity.LoginActivity">
 
-    <TextView android:text="@string/app_name" android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:id="@+id/text_app_name"
-              style="@style/TextAppearance.AppCompat.Display2"
-              android:textColor="@android:color/white"
-              android:layout_alignParentTop="true"
-              android:layout_centerHorizontal="true"/>
+        <TextView android:text="@string/app_name"
+            android:id="@+id/app_name_text"
+            style="@style/loginHeader"/>
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/usernameText"
-        android:hint="@string/text_username"
-        android:focusable="true"
-        android:layout_marginTop="46dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        <!-- Username Label -->
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/username_til"
+            android:layout_below="@id/app_name_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/passwordText"
-        android:layout_below="@+id/usernameText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/usernameText"
-        android:layout_alignEnd="@+id/usernameText"
-        android:hint="@string/text_password"/>
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/username_tiet"
+                style="@style/loginEditText"
+                android:hint="@string/username"/>
 
-    <Button
-        android:theme="@style/loginButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="login"
-        android:id="@+id/loginButtom"
-        android:onClick="login"
-        android:layout_below="@+id/passwordText"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <!-- Password Label -->
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/password_til"
+            android:layout_below="@id/username_til"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/password_tiet"
+                style="@style/loginEditText"
+                android:inputType="textPassword"
+                android:hint="@string/password"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+
+        <TextView android:id="@+id/forgot_username_password_link"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/loginLink"
+            android:text="@string/forgot_login"
+            android:layout_below="@+id/password_til"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:onClick="forgot"/>
+
+        <TextView android:id="@+id/sign_up_link"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/loginLink"
+            android:text="@string/sign_in"
+            android:layout_below="@+id/password_til"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/login_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:theme="@style/loginButton"
+            android:text="@string/login"
+            android:onClick="login"
+            android:layout_below="@+id/forgot_username_password_link"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
