--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/loginLink"
-        android:text="@string/sign_in"
+        android:text="@string/sign_up"
         android:layout_below="@+id/password_til"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
