--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,23 +22,6 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <!-- Page Detail -->
-    <style name="pageDatailLabel">
-        <item name="android:textSize">16sp</item>
-        <item name="android:paddingTop">20dp</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/colorLabelPageDatail</item>
-    </style>
-
-    <style name="pageDatailData">
-        <item name="android:textSize">16sp</item>
-        <item name="android:paddingTop">20dp</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/colorLabelPageDatailData</item>
-    </style>
-
     <style name="addRouteEditText">
         <item name="android:textSize">16sp</item>
         <item name="android:singleLine">true</item>
@@ -47,8 +30,21 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <!-- Login -->
+    <!-- Page Detail -->
+    <style name="pageDatailLabel">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
 
+    <style name="pageDatailData">
+        <item name="android:textSize">16sp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <!-- Login -->
     <style name="AppTheme.Dark.Dialog" parent="Theme.AppCompat.Dialog">
         <item name="colorAccent">@android:color/white</item>
         <item name="android:textColorPrimary">@android:color/white</item>
