--- a/pickmeup/src/main/res/layout/activity_add_route.xml
+++ b/pickmeup/src/main/res/layout/activity_add_route.xml
@@ -138,6 +138,15 @@
                 android:text="@string/publish"
                 android:textColor="@android:color/white"/>
 
+            <Button
+                android:id="@+id/join_btn"
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/streets_til"
+                android:text="@string/join"
+                android:textColor="@android:color/white"/>
+
         </RelativeLayout>
 
     </RelativeLayout>
