Fixing error text and bug when fields were nulls

--- a/pickmeup/src/main/res/layout/activity_route.xml
+++ b/pickmeup/src/main/res/layout/activity_route.xml
@@ -101,41 +101,11 @@
                 android:paddingTop="10dp"
                 android:layout_marginBottom="20dp"/>
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/departure_time_til"
-                android:layout_below="@+id/payment_method_spn"
-                app:errorEnabled="true"
-                style="@style/addRouteLabel"
-               >
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
 
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/departure_time_tiet"
-                        style="@style/addRouteEditText"
-                        android:layout_width="0dp"
-                        android:hint="@string/departure_time"
-                        android:onClick="showTimePickerDialog"
-                        android:layout_weight=".6"
-                       />
-                    <Button
-                        android:id="@+id/pick_date_btn"
-                        android:layout_width="0dp"
-                        android:layout_weight=".1"
-                        android:background="@drawable/ic_date_range"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/departure_time_tiet"
-                        android:onClick="showTimePickerDialog"
-                        android:textColor="@android:color/holo_red_light"/>
-                </LinearLayout>
-
-            </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/contact_til"
-                android:layout_below="@+id/departure_time_til"
+                android:layout_below="@+id/payment_method_spn"
                 app:errorEnabled="true"
                 style="@style/addRouteLabel">
 
@@ -146,9 +116,37 @@
 
             </android.support.design.widget.TextInputLayout>
 
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/departure_time_til"
+                android:layout_below="@+id/contact_til"
+                android:layout_width="290dp"
+                app:errorEnabled="true"
+                android:layout_alignParentLeft="true"
+                style="@style/addRouteLabel">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/departure_time_tiet"
+                    style="@style/addRouteEditText"
+                    android:editable="false"
+                    android:hint="@string/departure_time"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+            <Button
+                android:id="@+id/pick_date_btn"
+                android:layout_width="50dp"
+                android:background="@drawable/ic_date_range"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/departure_time_til"
+                android:layout_below="@+id/contact_til"
+                android:onClick="showTimePickerDialog"
+                android:gravity="right"
+                android:textColor="@android:color/holo_red_light"/>
+
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/streets_til"
-                android:layout_below="@+id/contact_til"
+                android:layout_below="@+id/departure_time_til"
                 app:errorEnabled="true"
                 style="@style/addRouteLabel">
 
