fix version 4.4.2 - Carlos Monzon

--- a/pickmeup/src/main/res/layout/activity_route.xml
+++ b/pickmeup/src/main/res/layout/activity_route.xml
@@ -79,6 +79,7 @@
                     android:id="@+id/passenger_max_capacity_tiet"
                     style="@style/addRouteEditText"
                     android:inputType="numberDecimal"
+                    android:maxLength="2"
                     android:hint="@string/passenger_quantity"/>
 
             </android.support.design.widget.TextInputLayout>
