[develop] Correcting contact detail back button, adding password confirmation and chaging the SignUpActivity XML

--- a/pickmeup/src/main/res/layout/activity_login.xml
+++ b/pickmeup/src/main/res/layout/activity_login.xml
@@ -73,16 +73,14 @@
             android:layout_alignParentStart="true"/>
 
         <TextView android:id="@+id/forgot_username_password_link"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/loginLink"
             android:text="@string/forgot_login"
             android:layout_below="@+id/checkBoxRemember"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
-            android:onClick="forgot"/>
+            android:layout_marginTop="24dp"/>
 
         <TextView android:id="@+id/sign_up_link"
             android:layout_width="wrap_content"
