--- a/pickmeup/src/main/res/layout/activity_signup.xml
+++ b/pickmeup/src/main/res/layout/activity_signup.xml
@@ -1,127 +1,143 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:gravity="center"
-    android:paddingBottom="@dimen/activity_vertical_margin">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:gravity="center"
+            android:paddingBottom="@dimen/activity_vertical_margin">
 
-    <!-- FirstName Label -->
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/signup_first_name_til"
-        android:layout_below="@id/app_name_text"
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:errorEnabled="true">
+        android:layout_height="wrap_content">
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/signup_first_name_tiet"
-            style="@style/loginEditText"
-            android:hint="@string/name"/>
+        <TextView android:text="@string/signup_button"
+                  android:id="@+id/app_name_text"
+                  style="@style/loginHeader"
+                  android:textColor="@color/colorPrimaryDark"/>
 
-    </android.support.design.widget.TextInputLayout>
+        <!-- FirstName Label -->
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/signup_first_name_til"
+            android:layout_below="@id/app_name_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
 
-    <!-- LastName Label -->
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/signup_last_name_til"
-        android:layout_below="@id/signup_first_name_til"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:errorEnabled="true">
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/signup_first_name_tiet"
+                style="@style/loginEditText"
+                android:hint="@string/name"/>
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/signup_last_name_tiet"
-            style="@style/loginEditText"
-            android:hint="@string/last_name"/>
+        </android.support.design.widget.TextInputLayout>
 
-    </android.support.design.widget.TextInputLayout>
+        <!-- LastName Label -->
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/signup_last_name_til"
+            android:layout_below="@id/signup_first_name_til"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
 
-    <!-- Email Label -->
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/signup_email_til"
-        android:layout_below="@id/signup_last_name_til"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:errorEnabled="true">
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/signup_last_name_tiet"
+                style="@style/loginEditText"
+                android:hint="@string/last_name"/>
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/signup_email_tiet"
-            style="@style/loginEditText"
-            android:hint="@string/email"/>
+        </android.support.design.widget.TextInputLayout>
 
-    </android.support.design.widget.TextInputLayout>
+        <!-- Email Label -->
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/signup_email_til"
+            android:layout_below="@id/signup_last_name_til"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
 
-    <!-- SkypeId Label -->
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/signup_skype_id_til"
-        android:layout_below="@id/signup_email_til"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:errorEnabled="true">
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/signup_email_tiet"
+                style="@style/loginEditText"
+                android:hint="@string/email"/>
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/signup_skype_id_tiet"
-            style="@style/loginEditText"
-            android:hint="@string/skype_id"/>
+        </android.support.design.widget.TextInputLayout>
 
-    </android.support.design.widget.TextInputLayout>
+        <!-- SkypeId Label -->
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/signup_skype_id_til"
+            android:layout_below="@id/signup_email_til"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
 
-    <!-- Cellphone Label -->
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/signup_cellphone_til"
-        android:layout_below="@id/signup_skype_id_til"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:errorEnabled="true">
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/signup_skype_id_tiet"
+                style="@style/loginEditText"
+                android:hint="@string/skype_id"/>
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/signup_cellphone_tiet"
-            style="@style/loginEditText"
-            android:hint="@string/cellphone"/>
+        </android.support.design.widget.TextInputLayout>
 
-    </android.support.design.widget.TextInputLayout>
+        <!-- Cellphone Label -->
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/signup_cellphone_til"
+            android:layout_below="@id/signup_skype_id_til"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
 
-    <!-- Password Label -->
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/signup_password_til"
-        android:layout_below="@id/signup_cellphone_til"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:errorEnabled="true">
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/signup_cellphone_tiet"
+                style="@style/loginEditText"
+                android:hint="@string/cellphone"/>
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/signup_password_tiet"
-            style="@style/loginEditText"
-            android:inputType="textPassword"
-            android:hint="@string/password"/>
+        </android.support.design.widget.TextInputLayout>
 
-    </android.support.design.widget.TextInputLayout>
+        <!-- Password Label -->
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/signup_password_til"
+            android:layout_below="@id/signup_cellphone_til"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
 
-    <!-- Sign Up button -->
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/signup_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:theme="@style/loginButton"
-        android:text="@string/signup_button"
-        android:onClick="signup"
-        android:layout_below="@+id/signup_password_til"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/signup_password_tiet"
+                style="@style/loginEditText"
+                android:inputType="textPassword"
+                android:hint="@string/password"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/backToLogin"
-        android:id="@+id/signup_backToLogin_txt"
-        android:layout_below="@+id/signup_btn"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textColor="#ffffff" />
+        </android.support.design.widget.TextInputLayout>
 
-</RelativeLayout>
+        <!-- Conform Password Label -->
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/signup_confirm_password_til"
+            android:layout_below="@id/signup_password_til"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/signup_confirm_password_tiet"
+                style="@style/loginEditText"
+                android:inputType="textPassword"
+                android:hint="@string/password_confirmation"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+        <!-- Sign Up button -->
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/signup_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:theme="@style/loginButton"
+            android:text="@string/signup_button"
+            android:onClick="signup"
+            android:layout_below="@+id/signup_confirm_password_til"
+            android:layout_centerHorizontal="true"/>
+
+    </RelativeLayout>
+
+</ScrollView>
