--- a/pickmeup/src/main/res/layout/fragment_all_routes.xml
+++ b/pickmeup/src/main/res/layout/fragment_all_routes.xml
@@ -11,5 +11,12 @@
         android:scrollbars="vertical"
         android:id="@+id/listViewRoutes"
     />
+    <TextView
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="gone"
+        android:text="No Data Available" />
 
 </FrameLayout>
