--- a/pickmeup/src/main/res/menu/activity_nav_drawer_drawer.xml
+++ b/pickmeup/src/main/res/menu/activity_nav_drawer_drawer.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="none">
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_home_black_24dp"
+            android:checked="true"
             android:title="Home"/>
         <item
             android:id="@+id/nav_profile"
